--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,34 @@
 <p>dashboard works!</p>
+
+<!-- Sidebar -->
+
+<div class="menu">
+  <div class="menu-item">
+    <i class="fas fa-tachometer-alt menu-icon"></i>
+    <span>Dashboard</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-folder-open menu-icon"></i>
+    <span>Projects</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-comment-dots menu-icon"></i>
+    <span>Chats</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-calendar-check menu-icon"></i>
+    <span>Availability</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-file-invoice-dollar menu-icon"></i>
+    <span>Invoices</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-plug menu-icon"></i>
+    <span>Integrations</span>
+  </div>
+  <div class="menu-item">
+    <i class="fas fa-bookmark menu-icon"></i>
+    <span>Saved Items</span>
+  </div>
+</div>
