--- a/expense_tracker_frontend/src/app/home/home.component.html
+++ b/expense_tracker_frontend/src/app/home/home.component.html
@@ -95,8 +95,8 @@
           <div class="text-center">
             <h2 class="fw-bolder">Benefits of Expense Tracker</h2>
             <p class="lead fw-normal text-muted mb-5">
-              Manage Your Finances with Ease without having the problem of spending
-              more than necessary.
+              Manage Your Finances with Ease without having the problem of
+              spending more than necessary.
             </p>
           </div>
         </div>
