--- a/expense_tracker_frontend/src/app/header/header.component.html
+++ b/expense_tracker_frontend/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark p-3" *ngIf="isLoggedIn">
   <button
     class="navbar-toggler"
     type="button"
