chart initialization done and added 2 more charts

--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -113,6 +113,15 @@
   </div>
 
   <!-- Contents -->
-
-  <div id="chartdiv"></div>
+  <div class="row">
+    <div class="p-3 col-6">
+      <app-earning-charts></app-earning-charts>
+    </div>
+    <div class="p-3 col-3">
+      <app-loan-charts></app-loan-charts>
+    </div>
+    <div class="p-3 col-3">
+      <app-saving-charts></app-saving-charts>
+    </div>
+  </div>
 </div>
