spending chart initialized

--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -123,5 +123,8 @@
     <div class="p-3 col-3">
       <app-saving-charts></app-saving-charts>
     </div>
+    <div class="p-3 col-7">
+      <app-spending-charts></app-spending-charts>
+    </div>
   </div>
 </div>
