updated the color of the dropdown

--- a/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-end">
-  <select [(ngModel)]="selectedOption" (ngModelChange)="onSelected($event)">
+<div class="d-flex justify-content-end bg-body-secondary">
+  <select class="bg-body-secondary" [(ngModel)]="selectedOption" (ngModelChange)="onSelected($event)">
     <option value="5">5</option>
     <option value="15">15</option>
     <option value="30">30</option>
