Earning , Loan and Saving Chart design completed

--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
   </div>
 
   <!-- Contents -->
-  <div class="row">
+  <div class="d-flex flex-wrap">
     <div class="p-3 col-6">
       <app-earning-charts></app-earning-charts>
     </div>
@@ -125,6 +125,9 @@
     </div>
     <div class="p-3 col-7">
       <app-spending-charts></app-spending-charts>
+    </div>
+    <div class="p-3 col-5">
+      <app-earning-by-month-charts></app-earning-by-month-charts>
     </div>
   </div>
 </div>
