--- a/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
@@ -1,1 +1,3 @@
-<div class="bg-body-secondary" style="width: 100%; height: 250px;">Spending</div>
+<div style="width: 100%; height: 250px" class="bg-body-secondary p-3">
+  <div class="fw-bold">Spending</div>
+</div>
