--- a/expense_tracker_frontend/src/app/dashboard/loan-charts/loan-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/loan-charts/loan-charts.component.html
@@ -1,1 +1,23 @@
-<div class="bg-body-secondary h-100"> Loan </div>
+<div class="d-flex justify-content-between bg-body-secondary p-3">
+  <div class="fw-bold">
+    Loan
+    <br />
+    <p>$2400</p>
+  </div>
+  <div>
+    <select
+      class="bg-body-secondary"
+      [(ngModel)]="selectedOption"
+      (ngModelChange)="onSelected($event)"
+    >
+      <option value="5">5 Days</option>
+      <option value="15">15 Days</option>
+      <option value="30">30 Days</option>
+    </select>
+  </div>
+</div>
+<div
+  id="loanchartdiv"
+  style="width: 100%; height: 250px"
+  class="bg-body-secondary"
+></div>
