--- a/expense_tracker_frontend/src/app/dashboard/earning-by-month-charts/earning-by-month-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/earning-by-month-charts/earning-by-month-charts.component.html
@@ -1,3 +1,9 @@
-<div class="h-100 bg-body-secondary p-3">
+<div class="d-flex justify-content-between bg-body-secondary p-3">
   <div class="fw-bold">Earning By Month</div>
 </div>
+
+<div
+  id="bymonthchartdiv"
+  style="width: 100%; height: 250px"
+  class="bg-body-secondary"
+></div>
