--- a/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
@@ -1,3 +1,20 @@
-<div style="width: 100%; height: 250px" class="bg-body-secondary p-3">
-  <div class="fw-bold">Spending</div>
+<div class="d-flex justify-content-between bg-body-secondary p-3">
+  <div class="fw-bold">Spending By Month</div>
+  <div>
+    <select
+      class="bg-body-secondary"
+      [(ngModel)]="defaultDateRange"
+      (ngModelChange)="onSelected($event)"
+    >
+      <option value="5">5 Days</option>
+      <option value="15">15 Days</option>
+      <option value="30">30 Days</option>
+    </select>
+  </div>
 </div>
+
+<div
+  id="earningbymonthchartdiv"
+  style="width: 100%; height: 250px"
+  class="bg-body-secondary"
+></div>
