colors updated and goBack button remaining

--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
   </div>
 
   <!-- Contents -->
-  <div class="d-flex flex-wrap">
+  <div class="d-flex flex-wrap background">
     <div class="p-3 col-6">
       <app-earning-charts></app-earning-charts>
     </div>
