--- a/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
@@ -1,11 +1,11 @@
-<div class="d-flex justify-content-between bg-body-secondary p-3">
+<div class="d-flex justify-content-between bg-white p-3">
   <div class="fw-bold">Earning Chart
     <br>
     <p>$2400</p>
   </div>
   <div>
     <select
-      class="bg-body-secondary"
+      class="bg-white"
       [(ngModel)]="selectedOption"
       (ngModelChange)="onSelected($event)"
     >
@@ -19,5 +19,5 @@
 <div
   id="chartdiv"
   style="width: 100%; height: 250px"
-  class="bg-body-secondary"
+  class="bg-white"
 ></div>
