--- a/expense_tracker_frontend/src/app/dashboard/saving-charts/saving-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/saving-charts/saving-charts.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between bg-body-secondary p-3">
+<div class="d-flex justify-content-between bg-white p-3">
   <div class="fw-bold">
     Saving
     <br />
@@ -6,7 +6,7 @@
   </div>
   <div>
     <select
-      class="bg-body-secondary"
+      class="bg-white"
       [(ngModel)]="selectedOption"
       (ngModelChange)="onSelected($event)"
     >
@@ -19,5 +19,5 @@
 <div
   id="savingchartdiv"
   style="width: 100%; height: 250px"
-  class="bg-body-secondary"
+  class="bg-white"
 ></div>
