--- a/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex justify-content-between bg-body-secondary p-3">
+<div class="d-flex justify-content-between bg-white p-3">
   <div class="fw-bold">Spending By Month</div>
   <div *ngIf="option">
     <select
-      class="bg-body-secondary"
+      class="bg-white"
       [(ngModel)]="defaultDateRange"
       (ngModelChange)="onSelected($event)"
     >
@@ -10,11 +10,15 @@
       <option value="15">15 Days</option>
       <option value="30">30 Days</option>
     </select>
+    <br />
+    <button class="btn btn-light mt-2 rounded-circle" onclick="goBack">
+      <span><i class="fa fa-arrow-left" aria-hidden="true"></i></span>
+    </button>
   </div>
 </div>
 
 <div
   id="earningbymonthchartdiv"
   style="width: 100%; height: 250px"
-  class="bg-body-secondary"
+  class="bg-white"
 ></div>
