--- a/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/earning-charts/earning-charts.component.html
@@ -2,7 +2,7 @@
   <div class="fw-bold">
     Earning Chart
     <br />
-    <p *ngIf="clicked" class="mt-2">Total Earning: ${{ total_cost }}</p>
+    <p class="mt-2">Total Earning: ${{ total_cost }}</p>
   </div>
   <div>
     <select
