--- a/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/spending-charts/spending-charts.component.html
@@ -3,7 +3,7 @@
     Spending By Month
     <br />
     <br />
-    <p *ngIf="option">Total Cost: ${{ total_cost }}</p>
+    <p *ngIf="option">Total Spending: ${{ total_cost }}</p>
   </div>
   <div class="d-flex flex-column" *ngIf="option">
     <select
