--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.scss
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.scss
@@ -73,6 +73,21 @@ body {
   border-radius: 50%;
 }
 
-.background{
+.background {
   background-color: #f7f7ff;
+}
+
+.modal.show {
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.5); /* Set the background to transparent */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  backdrop-filter: blur(1px);
+  display: none;
+}
+
+.modal.show .modal-content {
+  width: 600px; /* Adjust the width as needed */
 }
