seperated all components and validating the form

--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -1,120 +1,9 @@
 <div id="viewport">
-  <!-- Sidebar -->
-  <div id="sidebar">
-    <header>
-      <a>Expense Tracker</a>
-    </header>
-    <div class="col-md-12 bg-dark">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link text-white"
-            ><i class="fa fa-dashcube"></i> Dashboard</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white"><i class="fa fa-money"></i>Budget</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white"
-            ><i class="fa fa-exchange"></i>Transaction</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white"><i class="fa fa-file"></i>Report</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white"
-            ><i class="fa fa-file-pdf-o"></i>Export</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
+  <app-sidebar></app-sidebar>
 
-  <!-- header -->
-  <div id="content">
-    <div class="row">
-      <div class="w-100 bg-white">
-        <div
-          class="d-flex bg-body shadow-sm text-black p-3 pb-2 align-items-center"
-        >
-          <div class="flex-grow-1">
-            <h4>Good Morning Gail</h4>
-          </div>
-          <div class="me-2">
-            <button
-              class="btn btn-primary"
-              (click)="openPopup()"
-              mdbWavesEffect
-            >
-              Create New <span class="ms-1">+</span>
-            </button>
-          </div>
-          <!-- Notifications -->
-          <div class="dropdown">
-            <a
-              class="text-reset me-3 dropdown-toggle hidden-arrow"
-              id="navbarDropdownMenuLink"
-              role="button"
-              data-mdb-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <i class="fa fa-bell"></i>
-              <span class="badge rounded-pill badge-notification bg-danger"
-                >1</span
-              >
-            </a>
-            <ul
-              class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDropdownMenuLink"
-            >
-              <li>
-                <a class="dropdown-item">Some news</a>
-              </li>
-              <li>
-                <a class="dropdown-item">Another news</a>
-              </li>
-              <li>
-                <a class="dropdown-item">Something else here</a>
-              </li>
-            </ul>
-          </div>
-          <!-- Avatar -->
-          <div class="dropdown">
-            <a
-              class="dropdown-toggle d-flex align-items-center hidden-arrow"
-              id="navbarDropdownMenuAvatar"
-              role="button"
-              data-mdb-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <img
-                src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-                class="rounded-circle"
-                height="25"
-                alt="Black and White Portrait of a Man"
-                loading="lazy"
-              />
-            </a>
-            <ul
-              class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDropdownMenuAvatar"
-            >
-              <li>
-                <a class="dropdown-item">My profile</a>
-              </li>
-              <li>
-                <a class="dropdown-item">Settings</a>
-              </li>
-              <li>
-                <a class="dropdown-item">Logout</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-dashboard-header></app-dashboard-header>
+
+  <app-dashboard-modal></app-dashboard-modal>
 
   <!-- Contents -->
   <div class="d-flex flex-wrap background">
@@ -132,63 +21,6 @@
     </div>
     <div class="p-3 col-6">
       <app-earning-by-month-charts></app-earning-by-month-charts>
-    </div>
-  </div>
-</div>
-
-<!-- Modal Container -->
-
-<div
-  *ngIf="showPopup"
-  class="modal"
-  [class.show]="showPopup"
-  tabindex="-1"
-  role="dialog"
-  style="display: block"
->
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Spending Input</h5>
-        <button
-          type="button"
-          class="btn-close"
-          (click)="closePopup()"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="form">
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleFormControlInput1"
-              formControlName="email"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label"
-              >Example textarea</label
-            >
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-              formControlName="textarea"
-            ></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closePopup()">
-          Close
-        </button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
     </div>
   </div>
 </div>
