added datepicker to the popup

--- a/expense_tracker_frontend/src/app/dashboard/dashboard-modal/dashboard-popup/dashboard-modal.component.scss
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard-modal/dashboard-popup/dashboard-modal.component.scss
@@ -11,3 +11,9 @@
 .modal.show .modal-content {
   width: 600px; /* Adjust the width as needed */
 }
+
+.error-message {
+  color: red;
+  margin-top: 5px;
+  margin-left: 4px;
+}
