--- a/expense_tracker_frontend/src/app/dashboard/dashboard-modal/dashboard-popup/dashboard-modal.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard-modal/dashboard-popup/dashboard-modal.component.html
@@ -23,9 +23,31 @@
         <form [formGroup]="form">
           <!-- entry -->
           <div class="mb-3">
-            <div>
-              <label class="custom-control-label ms-1 me-2" for="amount">
-                Spending Amount</label
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="yyyy-mm-dd"
+                name="dp"
+                [displayMonths]="displayMonths"
+                [navigation]="navigation"
+                [outsideDays]="outsideDays"
+                [showWeekNumbers]="showWeekNumbers"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                formControlName="datePicker"
+              />
+              <button
+                class="btn btn-outline-secondary fa fa-calendar"
+                (click)="d.toggle()"
+                type="button"
+              ></button>
+            </div>
+
+            <hr />
+            <pre>Date: {{ this.form.value.datePicker | json}}</pre>
+            <div class="input-container">
+              <label class="custom-control-label ms-1 me-2" for="amount"
+                >Spending Amount</label
               >
               <input
                 id="amount"
@@ -36,6 +58,9 @@
                 formControlName="amount"
               />
             </div>
+            <p class="error-message" *ngIf="form.invalid && form.touched">
+              Invalid Input
+            </p>
           </div>
         </form>
       </div>
@@ -44,7 +69,7 @@
           Close
         </button>
         <button
-          [disabled]="!form.valid && !form.touched"
+          [disabled]="!form.valid"
           type="button"
           class="btn btn-primary"
           (click)="save()"
