--- a/expense_tracker_frontend/src/app/home/home.component.html
+++ b/expense_tracker_frontend/src/app/home/home.component.html
@@ -17,7 +17,11 @@
             <div
               class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start"
             >
-              <a class="btn btn-primary btn-lg px-4 me-sm-3">Get Started</a>
+              <a
+                class="btn btn-primary btn-lg px-4 me-sm-3"
+                routerLink="/dashboard"
+                >Get Started</a
+              >
               <a class="btn btn-outline-light btn-lg px-4">Learn More</a>
             </div>
           </div>
