fixed the image in home page

--- a/expense_tracker_frontend/src/app/home/home.component.html
+++ b/expense_tracker_frontend/src/app/home/home.component.html
@@ -29,7 +29,7 @@
         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
           <img
             class="img-fluid rounded-3 my-5"
-            src="https://media.licdn.com/dms/image/D5612AQGplp7JKG6Iiw/article-cover_image-shrink_600_2000/0/1673950361361?e=1701907200&v=beta&t=JiNpb4_ucImprBXiNXVFjRF-NKg19_39ZZ66WF5egfU"
+            src="https://www.wellybox.com/wp-content/uploads/2021/01/6-business-expense-tracker-1024x1024.jpg"
             alt="..."
           />
         </div>
