--- a/expense_tracker_frontend/src/app/dashboard/dashboard-header/dashboard-header/dashboard-header.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard-header/dashboard-header/dashboard-header.component.html
@@ -6,7 +6,7 @@
         class="d-flex bg-body shadow-sm text-black p-3 pb-2 align-items-center"
       >
         <div class="flex-grow-1">
-          <h4>Good Morning Gail</h4>
+          <h4>Greetings Gail</h4>
         </div>
         <div class="me-2">
           <button class="btn btn-primary" (click)="openPopup()" mdbWavesEffect>
