--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.scss
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.scss
@@ -6,6 +6,7 @@ body {
 /* Toggle Styles */
 
 #viewport {
+  overflow: hidden;
   padding-left: 15%;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
@@ -21,8 +22,6 @@ body {
 
 /* Sidebar Styles */
 
-
-
 .rounded-circle {
   border-radius: 50%;
 }
@@ -30,5 +29,3 @@ body {
 .background {
   background-color: #f7f7ff;
 }
-
-
