--- a/expense_tracker_frontend/src/app/home/home.component.html
+++ b/expense_tracker_frontend/src/app/home/home.component.html
@@ -92,7 +92,7 @@
     </div>
   </div>
   <!-- Blog preview section-->
-  <section class="py-5">
+  <section>
     <div class="container px-5 my-5">
       <div class="row gx-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
@@ -120,25 +120,4 @@
       </div>
     </div>
   </section>
-  <!-- Footer-->
-  <footer class="bg-dark py-4 mt-auto">
-    <div class="container px-5">
-      <div
-        class="row align-items-center justify-content-between flex-column flex-sm-row"
-      >
-        <div class="col-auto">
-          <div class="small m-0 text-white">
-            Copyright &copy; Expense Tracker 2023
-          </div>
-        </div>
-        <div class="col-auto">
-          <a class="link-light small">Privacy</a>
-          <span class="text-white mx-1">&middot;</span>
-          <a class="link-light small">Terms</a>
-          <span class="text-white mx-1">&middot;</span>
-          <a class="link-light small">Contact</a>
-        </div>
-      </div>
-    </div>
-  </footer>
 </div>
