--- a/expense_tracker_frontend/src/app/dashboard/saving-charts/saving-charts.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/saving-charts/saving-charts.component.html
@@ -9,10 +9,15 @@
       class="bg-white"
       [(ngModel)]="selectedOption"
       (ngModelChange)="onSelected($event)"
-    >
-      <option value="5">5 Days</option>
-      <option value="15">15 Days</option>
-      <option value="30">30 Days</option>
+    ><option [value]="selectedOptionEnum.FiveDays">
+      {{ selectedOptionEnum.FiveDays }} Days
+    </option>
+    <option [value]="selectedOptionEnum.FifteenDays">
+      {{ selectedOptionEnum.FifteenDays }} Days
+    </option>
+    <option [value]="selectedOptionEnum.ThirtyDays">
+      {{ selectedOptionEnum.ThirtyDays }} Days
+    </option>
     </select>
   </div>
 </div>
