--- a/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   <app-dashboard-modal></app-dashboard-modal>
 
   <!-- Contents -->
-  <div class="d-flex flex-wrap background py-3">
+  <div class="d-flex flex-wrap background py-3 mb-2">
     <div class="p-3 col-6">
       <app-earning-charts></app-earning-charts>
     </div>
