--- a/expense_tracker_frontend/src/app/dashboard/dashboard-header/dashboard-header/dashboard-header.component.html
+++ b/expense_tracker_frontend/src/app/dashboard/dashboard-header/dashboard-header/dashboard-header.component.html
@@ -53,8 +53,7 @@
           >
             <img
               src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-              class="rounded-circle"
-              height="25"
+              class="rounded-circle h-[39px]"
               alt="Black and White Portrait of a Man"
               loading="lazy"
             />
