--- a/expense_tracker_frontend/src/styles.scss
+++ b/expense_tracker_frontend/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "node_modules/font-awesome/css/font-awesome.min.css";
